# devinsight

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  storage.rs  tui.rs
