[package]
name = "DevInsight"
version = "0.1.0"
edition = "2021"
description = "A powerful TUI Android log analyzer with real-time filtering and search"
authors = ["Adam Deane"]
license = "MIT"
repository = "https://github.com/admbahm/devinsight"
keywords = ["android", "logcat", "tui", "debugging", "development"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.26.0"
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
copypasta = "0.10"
mac-notification-sys = { version = "0.6", optional = true }

[features]
default = []
macos = ["dep:mac-notification-sys"]
